tests/baselines/reference/FunctionDeclaration8_es6.errors.txt
FunctionDeclaration8_es6.ts(1,12): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
FunctionDeclaration8_es6.ts(1,12): error TS2304: Cannot find name 'yield'.
FunctionDeclaration8_es6.ts(1,20): error TS2304: Cannot find name 'foo'.


==== FunctionDeclaration8_es6.ts (3 errors) ====
    var v = { [yield]: foo }
               ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
               ~~~~~
!!! error TS2304: Cannot find name 'yield'.
                       ~~~
!!! error TS2304: Cannot find name 'foo'.